[tool.poetry]
name = "plcpidgeon"
version = "0.1.0"
description = ""
authors = ["Ryan Wilson <rwilson@greenerd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylogix = "^0.8.6"
typer = {extras = ["all"], version = "^0.7.0"}
scapy = "^2.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.poetry.scripts]
pidgeon = "plcpidgeon.plcpidgeon:app"
fly = "plcpidgeon.logdata:logtask"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
